--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tony Doan's Website</title>
   </head>
   <body>
-    <div id="root"></div>
+    <nav></nav>
+
+    <footer></footer>
   </body>
 </html>
