Added a brand, created some sections, added smooth scrolling

--- a/src/temp.html
+++ b/src/temp.html
@@ -1,21 +1,25 @@
-<style>
-  .color-red {
-    background-color: red;
-  }
-  .color-green {
-    background-color: green;
-  }
-</style>
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      /* Mobile */
+      div {
+        background-color: lightgreen;
+      }
+
+      /* Desktop */
+      @media only screen and (min-width: 769px) {
+        div {
+          width: 769px;
+        }
+      }
+    </style>
   </head>
 
   <body>
-    <p class="color-green color-red">This is a paragraph</p>
+    <div><p>This is a paragraph.</p></div>
   </body>
 </html>
