--- a/src/temp.html
+++ b/src/temp.html
@@ -5,21 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      /* Mobile */
-      div {
-        background-color: lightgreen;
+      .menu {
+        display: flex;
+        flex-flow: row nowrap;
       }
-
-      /* Desktop */
-      @media only screen and (min-width: 769px) {
-        div {
-          width: 769px;
-        }
+      .menu-icon div {
+        width: 35px;
+        height: 5px;
+        background-color: black;
+        margin: 6px;
+        border-radius: 5px;
+      }
+      .menu span {
+        font-size: 30px;
+        /* justify-content: center; */
+        margin-top: 3px;
       }
     </style>
   </head>
 
   <body>
-    <div><p>This is a paragraph.</p></div>
+    <button class="menu">
+      <div class="menu-icon">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <span>Menu</span>
+    </button>
   </body>
 </html>
