Updated READ.md, added home section with owl carousel, installed owl.carousel package, updated contact form

--- a/src/template.html
+++ b/src/template.html
@@ -9,5 +9,9 @@
     <nav></nav>
 
     <footer></footer>
+
+    <!-- loader -->
+    <script src="/node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
   </body>
 </html>
